--- a/node9.html
+++ b/node9.html
@@ -211,6 +211,19 @@ Emmet existe para diversos editores, entre ellos para
 </UL>
 
 <P>
+The <code>&lt;input&gt;</code> tag specifies an input field where the user can enter data.
+
+<P>
+<code>&lt;input&gt;</code> elements are used within a <code>&lt;form&gt;</code> element to declare input controls that allow users to input data.
+
+<P>
+The elements used to create controls generally appear inside a <code>&lt;form&gt;</code> 
+element, but may also appear outside of a <code>&lt;form&gt;</code> element declaration.
+
+<P>
+An input field can vary in many ways, depending on the <code>type</code> attribute.
+
+<P>
 
 <H4><A NAME="SECTION04120020000000000000">
 global.css</A>
