--- a/node9.html
+++ b/node9.html
@@ -217,11 +217,15 @@ The <code>&lt;input&gt;</code> tag specifies an input field where the user can e
 <code>&lt;input&gt;</code> elements are used within a <code>&lt;form&gt;</code> element to declare input controls that allow users to input data.
 
 <P>
-The elements used to create controls generally appear inside a <code>&lt;form&gt;</code> 
-element, but may also appear outside of a <code>&lt;form&gt;</code> element declaration.
+An input field can vary in many ways, depending on the <code>type</code> attribute.
 
 <P>
-An input field can vary in many ways, depending on the <code>type</code> attribute.
+The <code>type</code> attribute specifies the type of <code>&lt;input&gt;</code> element to display.
+The default type is <code>text</code>.
+
+<P>
+The elements used to create controls generally appear inside a <code>&lt;form&gt;</code> 
+element, but may also appear outside of a <code>&lt;form&gt;</code> element declaration.
 
 <P>
 
