--- a/node55.html
+++ b/node55.html
@@ -43,10 +43,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="tex2html1764"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
-  HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
+  HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="logoLPP.png"
- ALT="PL"></A><A NAME="tex2html3"
+ ALT="Apuntes de LPP"></A><A NAME="tex2html3"
   HREF="https://campusvirtual.ull.es/1415/course/view.php?id=5669"><IMG
   WIDTH="50" ALIGN="BOTTOM" BORDER="0"
  SRC="moodleLHPlogo.jpeg"
@@ -209,10 +209,10 @@ se realiza  por defecto mediante el algoritmo <SPAN  CLASS="textbf">LALR</SPAN>.
 <A NAME="tex2html1764"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
-  HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
+  HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="logoLPP.png"
- ALT="PL"></A><A NAME="tex2html3"
+ ALT="Apuntes de LPP"></A><A NAME="tex2html3"
   HREF="https://campusvirtual.ull.es/1415/course/view.php?id=5669"><IMG
   WIDTH="50" ALIGN="BOTTOM" BORDER="0"
  SRC="moodleLHPlogo.jpeg"
@@ -256,7 +256,7 @@ se realiza  por defecto mediante el algoritmo <SPAN  CLASS="textbf">LALR</SPAN>.
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-01-26</I>
+2015-01-27</I>
 </ADDRESS>
 </BODY>
 </HTML>
