--- a/node79.html
+++ b/node79.html
@@ -40,10 +40,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="tex2html2287"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  <A NAME="tex2html2"
-  HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
+  HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="logoLPP.png"
- ALT="PL"></A><A NAME="tex2html3"
+ ALT="Apuntes de LPP"></A><A NAME="tex2html3"
   HREF="https://campusvirtual.ull.es/1415/course/view.php?id=5669"><IMG
   WIDTH="50" ALIGN="BOTTOM" BORDER="0"
  SRC="moodleLHPlogo.jpeg"
@@ -394,10 +394,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="tex2html2287"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  <A NAME="tex2html2"
-  HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
+  HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="logoLPP.png"
- ALT="PL"></A><A NAME="tex2html3"
+ ALT="Apuntes de LPP"></A><A NAME="tex2html3"
   HREF="https://campusvirtual.ull.es/1415/course/view.php?id=5669"><IMG
   WIDTH="50" ALIGN="BOTTOM" BORDER="0"
  SRC="moodleLHPlogo.jpeg"
@@ -441,7 +441,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-01-26</I>
+2015-01-27</I>
 </ADDRESS>
 </BODY>
 </HTML>
