--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html844"
+<A NAME="tex2html845"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html838"
+<A NAME="tex2html839"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html832"
+<A NAME="tex2html833"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html840"
+<A NAME="tex2html841"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html842"
+<A NAME="tex2html843"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html845"
+<B> Sig:</B> <A NAME="tex2html846"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html839"
+<B>Sup:</B> <A NAME="tex2html840"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html833"
+<B> Ant:</B> <A NAME="tex2html834"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html840"
+<A NAME="tex2html841"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html842"
+<A NAME="tex2html843"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,30 +103,30 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html846"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html847"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html848"
-  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html849"
-  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
 <LI><A NAME="tex2html850"
-  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
 <LI><A NAME="tex2html851"
-  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
 <LI><A NAME="tex2html852"
-  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html853"
-  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html854"
+  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html855"
   HREF="node9.html#SECTION04120090000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2490"></A>
+   <A NAME="2492"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -216,7 +216,10 @@ Emmet existe para diversos editores, entre ellos para
 <P>
 
 <UL>
-<LI>The <code>&lt;input&gt;</code> tag specifies an input field where the user can enter data.
+<LI>The 
+<A NAME="tex2html25"
+  HREF="http://www.w3schools.com/tags/tag_input.asp">input</A>
+tag specifies an input field where the user can enter data.
 
 <P>
 </LI>
@@ -330,7 +333,7 @@ that runs in Node.js or in the browser.
 <P>
 It is open source (MIT licensed),
 and we can learn more about it at
-<A NAME="tex2html25"
+<A NAME="tex2html26"
   HREF="https://github.com/mochajs/mocha">https://github.com/mochajs/mocha</A>
 <P>
 Let's say
@@ -371,14 +374,14 @@ tests
 <P>
 Añadimos <code>chai.js</code>
 (Véase 
-<A NAME="tex2html26"
+<A NAME="tex2html27"
   HREF="http://chaijs.com/guide/installation/">http://chaijs.com/guide/installation/</A>) al directorio <code>tests</code>.
 
 <P>
 Chai is a platform-agnostic BDD/TDD assertion library featuring several interfaces 
 (for example, should, expect, and assert). 
 It is open source (MIT licensed), and we can learn more about it at
-<A NAME="tex2html27"
+<A NAME="tex2html28"
   HREF="http://chaijs. com/">http://chaijs. com/</A>
 <P>
 We can also install Chai on the command line using npm, as follows:
@@ -388,12 +391,12 @@ We can also install Chai on the command line using npm, as follows:
 
 <P>
 The latest tagged version will be available for hot-linking at 
-<A NAME="tex2html28"
+<A NAME="tex2html29"
   HREF="http://chaijs.com/chai.js">http://chaijs.com/chai.js</A>.
 
 <P>
 If you prefer to host yourself, use the <code>chai.js</code> file from the root of the 
-<A NAME="tex2html29"
+<A NAME="tex2html30"
   HREF="https://github.com/chaijs/chai">github project</A>. 
 
 <P>
@@ -410,7 +413,7 @@ tests/
 </PRE>
 Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
 el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html30"
+<A NAME="tex2html31"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>.
 
 <P>
@@ -521,14 +524,14 @@ Pruebas: Véase</A>
   
 
 <UL>
-<LI><A NAME="tex2html31"
+<LI><A NAME="tex2html32"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
-<LI><A NAME="tex2html32"
+<LI><A NAME="tex2html33"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
-<LI><A NAME="tex2html33"
+<LI><A NAME="tex2html34"
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
@@ -537,19 +540,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html844"
+<A NAME="tex2html845"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html838"
+<A NAME="tex2html839"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html832"
+<A NAME="tex2html833"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html840"
+<A NAME="tex2html841"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html842"
+<A NAME="tex2html843"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -589,11 +592,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html845"
+<B> Sig:</B> <A NAME="tex2html846"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html839"
+<B>Sup:</B> <A NAME="tex2html840"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html833"
+<B> Ant:</B> <A NAME="tex2html834"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
