--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2492"></A>
+   <A NAME="2494"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -235,6 +235,56 @@ tag specifies an input field where the user can enter data.
 The default type is <code>text</code>.
 
 <P>
+Other values are:
+
+<UL>
+<LI>button
+</LI>
+<LI>checkbox
+</LI>
+<LI>color
+</LI>
+<LI>date 
+</LI>
+<LI>datetime 
+</LI>
+<LI>datetime-local 
+</LI>
+<LI>email 
+</LI>
+<LI>file
+</LI>
+<LI>hidden
+</LI>
+<LI>image
+</LI>
+<LI>month 
+</LI>
+<LI>number 
+</LI>
+<LI>password
+</LI>
+<LI>radio
+</LI>
+<LI>range 
+</LI>
+<LI>reset
+</LI>
+<LI>search
+</LI>
+<LI>submit
+</LI>
+<LI>tel
+</LI>
+<LI>text
+</LI>
+<LI>time 
+</LI>
+<LI>url
+</LI>
+<LI>week
+</LI>
+</UL>
 </LI>
 <LI>The elements used to create controls generally appear inside a <code>&lt;form&gt;</code> 
 element, but may also appear outside of a <code>&lt;form&gt;</code> element declaration.
