--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2504"></A>
+   <A NAME="2506"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -302,17 +302,33 @@ global.css</A>
   
 
 <P>
+<PRE>
+[~/srcPLgrado/temperature(master)]$ cat global.css 
+th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
+#converted  { color: red; font-weight: bold; font-size:large;          }     /* Calculated values in bold */
+input       { 
+              text-align: right;       /* Align input to the right  */
+              border: none; 
+              border-radius: 20px 20px 20px 20px;
+              padding: 5px  5px;
+              font-size:large;       }
+body
+{
+ background-color:#b0c4de;  /* blue */
+ font-size:large;
+ font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+}
 
-    <pre>
-<span class="nt">th</span><span class="o">,</span> <span class="nt">td</span>      <span class="p">{</span> <span class="k">vertical-align</span><span class="o">:</span> <span class="k">top</span><span class="p">;</span> <span class="k">text-align</span><span class="o">:</span> <span class="k">right</span><span class="p">;</span> <span class="k">font-size</span><span class="o">:</span><span class="k">large</span><span class="p">;</span> <span class="p">}</span>     
-<span class="nf">#converted</span>  <span class="p">{</span> <span class="k">color</span><span class="o">:</span> <span class="nb">red</span><span class="p">;</span> <span class="k">font-weight</span><span class="o">:</span> <span class="k">bold</span><span class="p">;</span> <span class="k">font-size</span><span class="o">:</span><span class="k">large</span><span class="p">;</span>          <span class="p">}</span>    
-<span class="nt">input</span>       <span class="p">{</span> <span class="k">text-align</span><span class="o">:</span> <span class="k">right</span><span class="p">;</span>  <span class="k">border</span><span class="o">:</span> <span class="k">none</span><span class="p">;</span> <span class="k">font-size</span><span class="o">:</span><span class="k">large</span><span class="p">;</span>       <span class="p">}</span>   
-<span class="nt">body</span>
-<span class="p">{</span>
- <span class="k">background-color</span><span class="o">:</span><span class="m">#b0c4de</span><span class="p">;</span>  <span class="c">/* blue */</span>
- <span class="k">font-size</span><span class="o">:</span><span class="k">large</span><span class="p">;</span>
-<span class="p">}</span>
-    </pre>
+h1 {
+    font-weight: normal;
+    font-family: "Brush Script MT", cursive;
+    background: #3C5681;
+    padding: 5px 15px;
+    color: white;
+    display:inline-block;
+    border-radius: 10px 10px 10px 10px;
+}
+</PRE>
 
 <P>
 
