--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html851"
+<A NAME="tex2html850"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html845"
+<A NAME="tex2html844"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html839"
+<A NAME="tex2html838"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html847"
+<A NAME="tex2html846"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html849"
+<A NAME="tex2html848"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html852"
+<B> Sig:</B> <A NAME="tex2html851"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html846"
+<B>Sup:</B> <A NAME="tex2html845"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html840"
+<B> Ant:</B> <A NAME="tex2html839"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html847"
+<A NAME="tex2html846"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html849"
+<A NAME="tex2html848"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,30 +103,30 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html853"
+<LI><A NAME="tex2html852"
   HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html854"
+<LI><A NAME="tex2html853"
   HREF="node9.html#SECTION04120020000000000000">global.css</A>
-<LI><A NAME="tex2html855"
+<LI><A NAME="tex2html854"
   HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
-<LI><A NAME="tex2html856"
+<LI><A NAME="tex2html855"
   HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
-<LI><A NAME="tex2html857"
+<LI><A NAME="tex2html856"
   HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
-<LI><A NAME="tex2html858"
+<LI><A NAME="tex2html857"
   HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
-<LI><A NAME="tex2html859"
+<LI><A NAME="tex2html858"
   HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
-<LI><A NAME="tex2html860"
+<LI><A NAME="tex2html859"
   HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
-<LI><A NAME="tex2html861"
+<LI><A NAME="tex2html860"
   HREF="node9.html#SECTION04120090000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2514"></A>
+   <A NAME="2512"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -209,23 +209,21 @@ de Atom
 </LI>
 </UL>
 </LI>
-<LI>Para 
+<LI>En
 cloud9 
 (<A NAME="tex2html23"
   HREF="https://c9.io/">c9.io</A>)
-se puede usar la extension 
-<A NAME="tex2html24"
-  HREF="https://github.com/rmariuzzo/cloud9-emmet-ext">mariuzzo/cloud9-emmet-ext</A>
+el plugin ya viene instalado
 </LI>
 </UL>
 
 <P>
 
 <UL>
-<LI><A NAME="tex2html25"
+<LI><A NAME="tex2html24"
   HREF="http://docs.emmet.io/">Documentación de Emmet</A>
 </LI>
-<LI><A NAME="tex2html26"
+<LI><A NAME="tex2html25"
   HREF="http://docs.emmet.io/cheat-sheet/">Emmet cheat sheet</A>
 </LI>
 </UL>
@@ -234,7 +232,7 @@ se puede usar la extension
 
 <UL>
 <LI>The 
-<A NAME="tex2html27"
+<A NAME="tex2html26"
   HREF="http://www.w3schools.com/tags/tag_input.asp">input</A>
 tag specifies an input field where the user can enter data.
 
@@ -351,22 +349,22 @@ h1 {
 
 <UL>
 <LI>The CSS 
-<A NAME="tex2html28"
+<A NAME="tex2html27"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding</A>
 properties define the space between the element border and the element content.
 </LI>
 <LI>The 
-<A NAME="tex2html29"
+<A NAME="tex2html28"
   HREF="http://www.w3schools.com/cssref/pr_pos_vertical-align.asp">vertical-align</A>
 property sets the vertical alignment of an element.
 </LI>
 <LI>The 
-<A NAME="tex2html30"
+<A NAME="tex2html29"
   HREF="http://www.w3schools.com/cssref/pr_text_text-align.asp">text-align</A>
 property specifies the horizontal alignment of text in an element.
 </LI>
 <LI>The 
-<A NAME="tex2html31"
+<A NAME="tex2html30"
   HREF="http://www.w3schools.com/cssref/pr_font_font-family.asp">font-family</A>
 property specifies the font for an element.
 
@@ -444,7 +442,7 @@ that runs in Node.js or in the browser.
 <P>
 It is open source (MIT licensed),
 and we can learn more about it at
-<A NAME="tex2html32"
+<A NAME="tex2html31"
   HREF="https://github.com/mochajs/mocha">https://github.com/mochajs/mocha</A>
 <P>
 Let's say
@@ -485,14 +483,14 @@ tests
 <P>
 Añadimos <code>chai.js</code>
 (Véase 
-<A NAME="tex2html33"
+<A NAME="tex2html32"
   HREF="http://chaijs.com/guide/installation/">http://chaijs.com/guide/installation/</A>) al directorio <code>tests</code>.
 
 <P>
 Chai is a platform-agnostic BDD/TDD assertion library featuring several interfaces 
 (for example, should, expect, and assert). 
 It is open source (MIT licensed), and we can learn more about it at
-<A NAME="tex2html34"
+<A NAME="tex2html33"
   HREF="http://chaijs. com/">http://chaijs. com/</A>
 <P>
 We can also install Chai on the command line using npm, as follows:
@@ -502,12 +500,12 @@ We can also install Chai on the command line using npm, as follows:
 
 <P>
 The latest tagged version will be available for hot-linking at 
-<A NAME="tex2html35"
+<A NAME="tex2html34"
   HREF="http://chaijs.com/chai.js">http://chaijs.com/chai.js</A>.
 
 <P>
 If you prefer to host yourself, use the <code>chai.js</code> file from the root of the 
-<A NAME="tex2html36"
+<A NAME="tex2html35"
   HREF="https://github.com/chaijs/chai">github project</A>. 
 
 <P>
@@ -524,7 +522,7 @@ tests/
 </PRE>
 Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
 el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html37"
+<A NAME="tex2html36"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>.
 
 <P>
@@ -635,14 +633,14 @@ Pruebas: Véase</A>
   
 
 <UL>
-<LI><A NAME="tex2html38"
+<LI><A NAME="tex2html37"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
-<LI><A NAME="tex2html39"
+<LI><A NAME="tex2html38"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
-<LI><A NAME="tex2html40"
+<LI><A NAME="tex2html39"
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
@@ -651,19 +649,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html851"
+<A NAME="tex2html850"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html845"
+<A NAME="tex2html844"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html839"
+<A NAME="tex2html838"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html847"
+<A NAME="tex2html846"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html849"
+<A NAME="tex2html848"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -703,11 +701,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html852"
+<B> Sig:</B> <A NAME="tex2html851"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html846"
+<B>Sup:</B> <A NAME="tex2html845"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html840"
+<B> Ant:</B> <A NAME="tex2html839"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
