--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2512"></A>
+   <A NAME="2518"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -308,6 +308,22 @@ element, but may also appear outside of a <code>&lt;form&gt;</code> element decl
 
 <P>
 The <code>onchange</code> event occurs when the value of an element has been changed.
+
+<P>
+
+<UL>
+<LI>The <code>&lt;link&gt;</code> tag defines a link between a document and an external resource.
+</LI>
+<LI>The <code>rel</code> attribute is required. It specifies the relationship between the current document and the linked document
+</LI>
+<LI>The <code>&lt;link&gt;</code> tag is used to link to external CSS style sheets.
+<PRE>
+ &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
+</PRE>
+</LI>
+<LI><A NAME="2523"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2525"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+</LI>
+</UL>
 
 <P>
 
@@ -711,7 +727,7 @@ by Nicolas Perriault
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-01-29</I>
+2015-01-30</I>
 </ADDRESS>
 </BODY>
 </HTML>
