--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2518"></A>
+   <A NAME="2525"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -321,7 +321,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2523"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2525"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2530"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2532"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -364,6 +364,23 @@ h1 {
 <P>
 
 <UL>
+<LI><PRE>
+th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
+</PRE>
+What you see above is referred to as a <A NAME="2538"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+
+<P>
+
+<UL>
+<LI>Notice the curly braces. Also, notice that each semicolon separated statement inside the curly braces has a semi-colon. Everything
+inside the curly braces is called a <A NAME="2540"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+</LI>
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2542"></A><SPAN  CLASS="textit">selector</SPAN>.
+</LI>
+</UL>
+
+<P>
+</LI>
 <LI>The CSS 
 <A NAME="tex2html27"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding</A>
