--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2525"></A>
+   <A NAME="2528"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -321,7 +321,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2530"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2532"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2533"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2535"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -367,15 +367,22 @@ h1 {
 <LI><PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2538"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2541"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each semicolon separated statement inside the curly braces has a semi-colon. Everything
-inside the curly braces is called a <A NAME="2540"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2543"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2542"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2545"></A><SPAN  CLASS="textit">selector</SPAN>.
+</LI>
+<LI>Each of the three declarations in the declaration block is referred to as a—you guessed it— <A NAME="2547"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+</LI>
+<LI>Additionally, each declaration consists of a <A NAME="2549"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2551"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+</LI>
+<LI>Each CSS declaration ends with a semi-colon.
 </LI>
 </UL>
 
