--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2528"></A>
+   <A NAME="2536"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -321,7 +321,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2533"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2535"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2541"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2543"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -367,22 +367,47 @@ h1 {
 <LI><PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2541"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2549"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semi-colon. Everything
-inside the curly braces is called a <A NAME="2543"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2551"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2545"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2553"></A><SPAN  CLASS="textit">selector</SPAN>.
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a—you guessed it— <A NAME="2547"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a—you guessed it— <A NAME="2555"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2549"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2551"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2557"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2559"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semi-colon.
+</LI>
+</UL>
+
+<P>
+</LI>
+<LI> <B>Selectores:</B>
+
+<UL>
+<LI>A selector of <code>nav</code> would match all HTML <code>&lt;nav&gt;</code> elements, and a selector of <code>ul</code> would match all HTML unordered lists, or <code>&lt;ul&gt;</code> elements.
+</LI>
+<LI>An ID selector is declared using a hash, or pound symbol (<code>#</code>) 
+preceding a string of characters. 
+The string of characters is defined by the developer. 
+This selector matches any HTML element that has an
+<code>ID</code> attribute with the same value as that of the selector, but minus the hash symbol.
+
+<P>
+The rule:
+<PRE>
+#converted  { color: red; font-weight: bold; font-size:large; } /* Calculated values in bold */
+</PRE>
+applies to:
+<PRE>
+&lt;span class="output" id="converted"&gt;
+</PRE>
 </LI>
 </UL>
 
