--- a/node9.html
+++ b/node9.html
@@ -478,8 +478,7 @@ Dada esta regla
   &lt;/div&gt;
 &lt;/div&gt;
 </PRE><I>
-Dada esta regla
-</I><PRE>
+Dada esta regla </I><PRE>
 h2 ~ p { margin-bottom: 20px; }
 </PRE><I>
 ¿A que elementos de este HTML se aplica?
