--- a/node9.html
+++ b/node9.html
@@ -461,28 +461,28 @@ The font-family property can hold several font names as a "fallback" system. If 
 &lt;div class="box"&gt;&lt;/div&gt;
 </PRE>
 </LI>
-</UL><I>
-Dada esta regla
-</I><PRE>
+<LI>Dada esta regla
+<PRE>
 #container &gt; .box {
    float: left;
    padding-bottom: 15px;
 }
-</PRE><I>
+</PRE>
 ¿A que elementos de este HTML se aplica?
-</I><PRE>
+<PRE>
 &lt;div id="container"&gt;
   &lt;div class="box"&gt;&lt;/div&gt;
   &lt;div&gt;
     &lt;div class="box"&gt;&lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
-</PRE><I>
-Dada esta regla </I><PRE>
+</PRE>
+</LI>
+<LI>Dada esta regla <PRE>
 h2 ~ p { margin-bottom: 20px; }
-</PRE><I>
+</PRE>
 ¿A que elementos de este HTML se aplica?
-</I><PRE>
+<PRE>
 &lt;h2&gt;Title&lt;/h2&gt;
 &lt;p&gt;Paragraph example.&lt;/p&gt;
 &lt;p&gt;Paragraph example.&lt;/p&gt;
@@ -490,14 +490,15 @@ h2 ~ p { margin-bottom: 20px; }
 &lt;div class="box"&gt;
   &lt;p&gt;Paragraph example.&lt;/p&gt;
 &lt;/div&gt;
-</PRE><I>
-Dada esta regla </I><PRE>
+</PRE>
+</LI>
+<LI>Dada esta regla <PRE>
 p+ p {
 text-indent: 1.5em; margin-bottom: 0;
 }
-</PRE><I>
+</PRE>
 ¿A que elementos de este HTML se aplica?
-</I><PRE>
+<PRE>
 &lt;h2&gt;Title&lt;/h2&gt;
 &lt;p&gt;Paragraph example.&lt;/p&gt;
 &lt;p&gt;Paragraph example.&lt;/p&gt;
@@ -506,7 +507,9 @@ text-indent: 1.5em; margin-bottom: 0;
   &lt;p&gt;Paragraph example.&lt;/p&gt;
   &lt;p&gt;Paragraph example.&lt;/p&gt;
 &lt;/div&gt;
-</PRE></DIV><P></P>
+</PRE>
+</LI>
+</UL></DIV><P></P>
 
 <P>
 
