--- a/node9.html
+++ b/node9.html
@@ -382,7 +382,7 @@ Here we're using commas to separate our selectors <code>th</code> and <code>td</
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a —you guessed it— <A NAME="2585"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2585"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
 <LI>Additionally, each declaration consists of a <A NAME="2587"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
 and a <A NAME="2589"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
